todo_app/overlays/staging/resources/route_backend_staging.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-backend-route
spec:
  parentRefs:
  - name: infra-envoy-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todoapp-staging/api
    backendRefs:
    - name: todoapp-backend-svc
      port: 3001
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
